--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -10,7 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="simen.crashlogsample.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"/>
+
+    <Button
+        android:id="@+id/click2"
+        android:layout_below="@+id/click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
